--- a/templates/index_lecture.html
+++ b/templates/index_lecture.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lecture Search</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
-        body { padding-top: 20px; }
+        body { 
+            font-family: 'Montserrat', sans-serif;
+            background-color: #f4f4f9;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            padding-top: 20px;
+        }
         .lecture-id { margin: 5px; padding: 10px; background-color: #c9c4fe; border: 1px solid #dee2e6; border-radius: 5px; display: inline-block; }
         .lecture-container { margin-top: 20px; }
         /* Correct CSS selector for modifying Bootstrap primary button */
@@ -30,7 +40,7 @@
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
         <div class="lecture-container">
-            <h2>Available Lecture IDs:</h2>
+            <h2>Available Lecture id:</h2>
             {% for lecture in lecture_ids %}
                 <div class="lecture-id">{{ lecture.lecture_id }}</div>
             {% endfor %}
