--- a/templates/student.html
+++ b/templates/student.html
@@ -3,30 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Results</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
+    <title>Dashboard for Student XX</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
-            color: #333;
+            font-family: 'Montserrat', sans-serif;
+            background-color: #f4f4f9;
+            padding: 40px;
+            margin: 0;
         }
-        .stats-table, .details-table {
+        h1, h2 {
+            color: #333;
+            margin-bottom: 20px; /* Space below the titles */
+        }
+        table {
             width: 100%;
             margin-top: 20px;
             border-collapse: collapse;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
         }
-        .stats-table th {
-            width: 30%; /* Reducing the width of headers */
-        }
-        .stats-table td {
-            width: 70%; /* Increasing the width of data cells */
+        .stats-table th, .stats-table td {
+            width: 50%; /* Each column takes half the width */
+            text-align: left;
         }
         th, td {
             border: 1px solid #ddd;
             padding: 12px;
-            text-align: left;
         }
         th {
             background-color: #776cfd;
@@ -38,48 +41,55 @@
         tr:hover {
             background-color: #ddd;
         }
+        .details-section {
+            margin-top: 40px; /* Adding more space between the tables */
+        }
     </style>
 </head>
 <body>
-    <h1>Dashboard for Student ID: {{ results['student_id'] }}</h1>
-    <table class="stats-table">
-        <tr>
-            <th>Total Questions Solved</th>
-            <td>{{ results['total_questions_solved'] }}</td>
-        </tr>
-        <tr>
-            <th>Student Correctness</th>
-            <td>{{ results['student_correctness'] | round(2) }}%</td>
-        </tr>
-        <tr>
-            <th>Correctness Comparison</th>
-            <td>{{ results['correctness_comparison'] | round(2) }}%</td>
-        </tr>
-    </table>
-    <h2>Details of Wrong Answers</h2>
-    <table class="details-table">
-        <thead>
+    <div class="container">
+        <h1>Dashboard for Student {{results['student_id']}}</h1>
+        <table class="stats-table">
             <tr>
-                <th>Question ID</th>
-                <th>Time Taken</th>
-                <th>Average Time Taken</th>
-                <th>Average Correctness</th>
-                <th>My Answer</th>
-                <th>Correct Answer</th>
+                <th>Total Questions Solved</th>
+                <td>{{ results['total_questions_solved'] }}</td>
             </tr>
-        </thead>
-        <tbody>
-            {% for row in results['wrong_answers_df'].collect() %}
             <tr>
-                <td>{{ row['question_id'] }}</td>
-                <td>{{ row['elapsed_time']| round(2) }}</td>
-                <td>{{ row['average_time_taken_on_this_q'] | round(2)}}</td>
-                <td>{{ row['average_correctness_of_this_q'] | round(2)}}</td>
-                <td>{{ row['student_answer'] }}</td>
-                <td>{{ row['correct_answer'] }}</td>
+                <th>Student Correctness</th>
+                <td>{{ results['student_correctness'] | round(2) }}%</td>
             </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            <tr>
+                <th>Correctness Comparison</th>
+                <td>{{ results['correctness_comparison'] | round(2) }}%</td>
+            </tr>
+        </table>
+        <div class="details-section">
+            <h2>Details of Wrong Answers</h2>
+            <table class="details-table">
+                <thead>
+                    <tr>
+                        <th>Question ID</th>
+                        <th>Time Taken</th>
+                        <th>Average Time Taken</th>
+                        <th>Average Correctness</th>
+                        <th>My Answer</th>
+                        <th>Correct Answer</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for row in results['wrong_answers_df'].collect() %}
+                    <tr>
+                        <td>{{ row['question_id'] }}</td>
+                        <td>{{ row['elapsed_time']| round(2) }}</td>
+                        <td>{{ row['average_time_taken_on_this_q'] | round(2) }}</td>
+                        <td>{{ row['average_correctness_of_this_q'] | round(2) }}</td>
+                        <td>{{ row['student_answer'] }}</td>
+                        <td>{{ row['correct_answer'] }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
